[package]
authors = ["intpp <intpplus@gmail.com>"]
description = "SWC Plugin for jsx-control-statements"
edition = "2021"
license = "ISC"
name = "swc_plugin_jsx_control_statements_v2"
publish = false
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[dependencies]
easy-error = "1.0.0"
serde = "1"
swc_core = { version = "0.88.*", features = ["ecma_plugin_transform"] }
tracing = {version = "0.1.*", features = ["release_max_level_off"]}
jsx_control_statements = {path = "./transform", version = "0.1.0"}
swc_common = "=0.33.19"