[package]
name = "jsx_control_statements"
version = "0.1.3"
edition = "2021"

[dependencies]
easy-error = "1.0.0"
serde = "1.0.171"
swc_core = { version = "0.88.*", features = ["ecma_plugin_transform"] }
tracing = {version = "0.1.*", features = ["release_max_level_off"]}
swc_common = "=0.33.19"

[dev-dependencies]
testing = "0.35.*"
swc_core = { version = "0.90.*", features = ["testing_transform", "ecma_parser"] }
